apps/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: n8n
  namespace: fluia
  labels:
    app: n8n

spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"

      containers:
        - name: n8n
          image: n8nio/n8n:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5678
              protocol: TCP
      volumes:
        - name: n8n-pvc
          persistentVolumeClaim:
            claimName: n8n-pvc
