apps/n8n/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: n8n
  namespace: fluia
  labels:
    app: n8n

spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - name: http
      port: 80
      targetPort: 5678
      protocol: TCP
