apps/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: n8n
  namespace: fluia
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  tls:
    - hosts:
        - n8n-fluia.ynoacamino.me
      secretName: pvz2-tls

  rules:
    - host: n8n-fluia.ynoacamino.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
